# DiscordBot

./: Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  build.sh  docker-compose.yml  shell.nix
src/: main.rs  ping_cmd.rs
