[package]
name = "DiscordBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
features = [
	"builder",
	"chrono",
	"client",
	"framework",
	"gateway",
	"http",
	"model",
	"standard_framework",
	"utils",
	"rustls_backend",
]
version = "0.11"
